# microsservicos-comunicacao

./: .gitignore  Dockerfile  README.md  WEBHOOK_SETUP.md  docker-compose.yml  package-lock.json  package.json
front/: .gitignore  README.md
front/src/: package-lock.json  package.json
front/src/src/: App.js
payment-bank-api/: .env.example  Dockerfile  README.md  pyproject.toml
payment-bank-api/app/: main.py
payment-bank-api/app/api/v1/routes/: bank.py  credit_card.py  debit_card.py
payment-bank-api/app/config/: settings.py
payment-bank-api/app/db/: session.py
payment-bank-api/app/db/models/: bank.py  card.py
payment-bank-api/app/db/repositories/: bank.py  card.py
payment-bank-api/app/schemas/: bank.py  card.py
payment-bank-api/app/services/: bank.py  card.py  consul_service.py
payment-bank-api/scripts/: run.sh
payment-method-api/: Dockerfile  README.md  api.py  consul_service.py  pyproject.toml
payment-service-api/: Dockerfile  package-lock.json  package.json  tsconfig.json
payment-service-api/prisma/: schema.prisma
payment-service-api/src/: app.ts  server.ts
payment-service-api/src/config/: swagger.js
payment-service-api/src/controllers/: pagamento.controller.ts
payment-service-api/src/routes/: health.routes.ts  metodoPagamento.routes.js  pagamento.routes.ts
payment-service-api/src/services/: discovery.service.ts  logger.service.ts  metodoPagamento.service.ts  (+1 more)
src/: app.js  server.js
src/controllers/: pagamento.controller.js
src/routes/: pagamento.routes.js
src/services/: metodoPagamento.service.js  pagamento.fake.service.js
(+16 files in other folders)
