[project]
name = "payment-method-crud-ufrpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
prod = [
    "psycopg[binary]>=3.2.9",
]
